--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="10dp">
-
-    <EditText
-        android:id="@+id/editText"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    android:scrollbars="vertical"
+    android:paddingBottom="?android:attr/actionBarSize">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:hint="Message" />
+        android:layout_height="match_parent"
+        tools:context=".MainActivity"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="10dp">
 
-    <TimePicker
-        android:id="@+id/timePicker"
-        android:layout_width="310dp"
-        android:layout_height="360dp"
-        android:layout_marginTop="20dp"
-        android:headerBackground="#03DAC5" />
+        <EditText
+            android:id="@+id/editTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:hint="Title" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp">
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:hint="Message" />
 
-        <Button
-            android:id="@+id/setBtn"
-            android:layout_width="130dp"
-            android:layout_height="50dp"
-            android:layout_marginRight="50dp"
-            android:text="SET"
-            app:backgroundTint="#3700B3" />
+        <TimePicker
+            android:id="@+id/timePicker"
+            android:layout_width="310dp"
+            android:layout_height="360dp"
+            android:layout_marginTop="20dp"
+            android:headerBackground="#03DAC5" />
 
-        <Button
-            android:id="@+id/cancelBtn"
-            android:layout_width="130dp"
-            android:layout_height="50dp"
-            android:text="CANCEL"
-            app:backgroundTint="#3700B3" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp">
+
+            <Button
+                android:id="@+id/setBtn"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="50dp"
+                android:text="SET"
+                app:backgroundTint="#3700B3" />
+
+            <Button
+                android:id="@+id/cancelBtn"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:text="CANCEL"
+                app:backgroundTint="#3700B3" />
+        </LinearLayout>
+
     </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
