--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:fillViewport="true"
     android:scrollbars="vertical"
+    android:background="#A3BDBB"
     android:paddingBottom="?android:attr/actionBarSize">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,6 +14,7 @@
         tools:context=".MainActivity"
         android:orientation="vertical"
         android:gravity="center"
+        android:background="#A3BDBB"
         android:padding="10dp">
 
         <EditText
@@ -20,6 +22,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
+            android:background="#A3BDBB"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             android:hint="Title" />
 
         <EditText
@@ -27,6 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
+            android:background="#A3BDBB"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             android:hint="Message" />
 
         <TimePicker
@@ -34,7 +42,9 @@
             android:layout_width="310dp"
             android:layout_height="360dp"
             android:layout_marginTop="20dp"
-            android:headerBackground="#03DAC5" />
+            android:timePickerMode="clock"
+            android:background="@color/white"
+            android:headerBackground="#022925" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -47,14 +57,14 @@
                 android:layout_height="50dp"
                 android:layout_marginRight="50dp"
                 android:text="SET"
-                app:backgroundTint="#3700B3" />
+                app:backgroundTint="#022925" />
 
             <Button
                 android:id="@+id/cancelBtn"
                 android:layout_width="130dp"
                 android:layout_height="50dp"
                 android:text="CANCEL"
-                app:backgroundTint="#3700B3" />
+                app:backgroundTint="#022925" />
         </LinearLayout>
 
     </LinearLayout>
